# logos-wallet-basecamp

./: CMakeLists.txt  README.md  flake.nix  metadata.json  result
docs/: retro-log.md
docs/skills/: wallet-cli-setup-from-zero.md
modules/logos_wallet/: manifest.json  metadata.json
plugins/wallet_ui/: flake.nix  manifest.json  metadata.json  result
plugins/wallet_ui/qml/: Main.qml
scripts/: install-dev.sh
src/plugin/: WalletPlugin.cpp  WalletPlugin.h
tests/: headless_test.sh  logos_api_stub.cpp  test_wallet_plugin.cpp
